Automatically create services files for modules; place into output
 Also fixed createStartScripts task